--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mahmud Hasan Mubin</title>
     <!-- Favicon -->
-    <link rel="shortcut icon" href="./images/favicon.png" type="image/png" />
+    <link
+      rel="shortcut icon"
+      href="./images/Logo_2_without bg.png"
+      type="image/png"
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
