--- a/index.html
+++ b/index.html
@@ -232,11 +232,11 @@
                   </div>
 
                   <div class="single-progress">
-                    <h6>Programming</h6>
+                    <h6>Backend Development</h6>
                     <div
                       class="progress"
                       role="progressbar"
-                      aria-label="Programming"
+                      aria-label="Backend Development"
                       aria-valuenow="0"
                       aria-valuemin="0"
                       aria-valuemax="100"
@@ -247,7 +247,7 @@
                   </div>
 
                   <div class="single-progress">
-                    <h6>Problem Solving</h6>
+                    <h6>Frontend Development</h6>
                     <div
                       class="progress"
                       role="progressbar"
@@ -262,7 +262,7 @@
                   </div>
 
                   <div class="single-progress">
-                    <h6>Database</h6>
+                    <h6>Database Management</h6>
                     <div
                       class="progress"
                       role="progressbar"
